--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="imgs/logo.png" type="image/x-icon">
     <title>Dragon Host</title>
 </head>
 <body>
@@ -68,7 +69,7 @@
                         <li>25 contas de e-mail</li>
                         <li>C-panel</li>
                         <li>Suporte 24/7</li>
-                        <li class="plan-btn">Saber mais</li>
+                        <li class="plan-btn">Saiba mais!</li>
                     </ul>
                 </div>
                 <div class="plan">
@@ -80,7 +81,7 @@
                         <li>50 contas de e-mail</li>
                         <li>C-panel</li>
                         <li>Suporte 24/7</li>
-                        <li class="plan-btn">Saber mais</li>
+                        <li class="plan-btn">Saiba mais!</li>
                     </ul>
                 </div>
                 <div class="plan">
@@ -92,7 +93,7 @@
                         <li>100 contas de e-mail</li>
                         <li>C-panel</li>
                         <li>Suporte 24/7</li>
-                        <li class="plan-btn recommended">Saber mais</li>
+                        <li class="plan-btn recommended">Saiba mais!</li>
                     </ul>
                 </div>
                 <div class="plan">
@@ -104,7 +105,7 @@
                         <li>200 contas de e-mail</li>
                         <li>C-panel</li>
                         <li>Suporte 24/7</li>
-                        <li class="plan-btn">Saber mais</li>
+                        <li class="plan-btn">Saiba mais!</li>
                     </ul>
                 </div>
             </div>
